--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_compact_corsika_telescopeheights.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_print_compact_corsika_telescopeheights.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     INPUT: ./tests/resources/telescope_positions-North-utm.ecsv
     EXPORT: ground
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     OUTPUT_FILE: test.ecsv
     SKIP_OUTPUT_VALIDATION: true
     SELECT_ASSETS: ['LSTN', 'MSTN']
