--- a/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
@@ -12,6 +12,6 @@ CTA_SIMPIPE:
     USE_RANDOM_FLEN: true
     RNDA: 0.0063
     TEST: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
     - OUTPUT_FILE: TEST.ecsv
