--- a/tests/integration_tests/config/simulate_light_emission_variable.yml
+++ b/tests/integration_tests/config/simulate_light_emission_variable.yml
@@ -9,4 +9,4 @@ CTA_SIMPIPE:
     LIGHT_SOURCE_SETUP: variable
     MODEL_VERSION: 6.0.0
     LIGHT_SOURCE_TYPE: led
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
