--- a/tests/integration_tests/config/validate_camera_efficiency_msts.yml
+++ b/tests/integration_tests/config/validate_camera_efficiency_msts.yml
@@ -6,11 +6,11 @@ CTA_SIMPIPE:
     TELESCOPE: MSTS-design
     MODEL_VERSION: 6.0.0
     NSB_SPECTRUM: tests/resources/benn_ellison_spectrum_for_testing.txt
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTS-design_nsb.pdf
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTS-design_nsb.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTS-design_cherenkov.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTS-design_cherenkov.pdf
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-summary-South-MSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-table-South-MSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
+    - OUTPUT_FILE: validate_camera_efficiency_MSTS-design_nsb.pdf
+    - OUTPUT_FILE: validate_camera_efficiency_MSTS-design_nsb.png
+    - OUTPUT_FILE: validate_camera_efficiency_MSTS-design_cherenkov.png
+    - OUTPUT_FILE: validate_camera_efficiency_MSTS-design_cherenkov.pdf
+    - OUTPUT_FILE: camera-efficiency-summary-South-MSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
+    - OUTPUT_FILE: camera-efficiency-table-South-MSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
