--- a/tests/integration_tests/config/calculate_trigger_rate_more_files.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_more_files.yml
@@ -6,7 +6,7 @@ CTA_SIMPIPE:
       - './tests/resources/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
       - './tests/resources/run202_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst'
     SAVE_TABLES: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
-    - OUTPUT_FILE: application-plots/run202_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
+    - OUTPUT_FILE: run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
+    - OUTPUT_FILE: run202_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
