--- a/tests/integration_tests/config/calculate_trigger_rate_one_file_save_table.yml
+++ b/tests/integration_tests/config/calculate_trigger_rate_one_file_save_table.yml
@@ -5,6 +5,6 @@ CTA_SIMPIPE:
     SIMTEL_FILE_NAMES: |
       ./tests/resources/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
     SAVE_TABLES: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
+    - OUTPUT_FILE: run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.ecsv
