--- a/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_mercator_to_utm_meta_in_table.yml
+++ b/tests/integration_tests/config/convert_geo_coordinates_of_array_elements_mercator_to_utm_meta_in_table.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     INPUT: tests/resources/telescope_positions-North-mercator.ecsv
     EXPORT: utm
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     OUTPUT_FILE: test.ecsv
     SELECT_ASSETS: ['LSTN', 'MSTN']
     SKIP_INPUT_VALIDATION: True
