--- a/tests/integration_tests/config/db_get_array_layouts_from_db_layout_list.yml
+++ b/tests/integration_tests/config/db_get_array_layouts_from_db_layout_list.yml
@@ -6,5 +6,5 @@ CTA_SIMPIPE:
     MODEL_VERSION: "6.0.0"
     ARRAY_ELEMENT_LIST: ["LSTS", "MSTS", "SSTS"]
     COORDINATE_SYSTEM: ground
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     OUTPUT_FILE: array_layout_south_ground_from_list.ecsv
