--- a/tests/integration_tests/config/derive_psf_parameters_run.yml
+++ b/tests/integration_tests/config/derive_psf_parameters_run.yml
@@ -8,6 +8,6 @@ CTA_SIMPIPE:
     data: ./tests/resources/PSFcurve_data_v2.txt
     ZENITH: 20
     TEST: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_tune_psf.ecsv
+    - OUTPUT_FILE: results/ray-tracing-North-LSTN-01-d10.0km-za20.0deg_tune_psf.ecsv
