--- a/tests/integration_tests/config/generate_corsika_histograms_1D_run_header.yml
+++ b/tests/integration_tests/config/generate_corsika_histograms_1D_run_header.yml
@@ -8,9 +8,9 @@ CTA_SIMPIPE:
     HDF5: true
     HDF5_FILE_NAME: test_file_21_run_header.hdf5
     EVENT_1D_HISTOGRAMS: total_energy
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     TEST: true
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/test_file_21_run_header.pdf
-    - OUTPUT_FILE: application-plots/test_file_21_run_header.hdf5
-    - OUTPUT_FILE: application-plots/test_file_21_run_header.hdf5_event_1d_histograms.pdf
+    - OUTPUT_FILE: test_file_21_run_header.pdf
+    - OUTPUT_FILE: test_file_21_run_header.hdf5
+    - OUTPUT_FILE: test_file_21_run_header.hdf5_event_1d_histograms.pdf
