--- a/tests/integration_tests/config/generate_corsika_histograms_2D_run_header.yml
+++ b/tests/integration_tests/config/generate_corsika_histograms_2D_run_header.yml
@@ -10,9 +10,9 @@ CTA_SIMPIPE:
     EVENT_2D_HISTOGRAMS:
       - zenith
       - azimuth
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     TEST: true
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/test_file_2D_run_header.pdf
-    - OUTPUT_FILE: application-plots/test_file_2D_run_header.hdf5
-    - OUTPUT_FILE: application-plots/test_file_2D_run_header.hdf5_event_2d_histograms.pdf
+    - OUTPUT_FILE: test_file_2D_run_header.pdf
+    - OUTPUT_FILE: test_file_2D_run_header.hdf5
+    - OUTPUT_FILE: test_file_2D_run_header.hdf5_event_2d_histograms.pdf
