--- a/tests/integration_tests/config/generate_default_metadata_to_yml_file.yml
+++ b/tests/integration_tests/config/generate_default_metadata_to_yml_file.yml
@@ -3,7 +3,7 @@ CTA_SIMPIPE:
   TEST_NAME: test-yaml
   CONFIGURATION:
     OUTPUT_FILE: test.yml
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     SCHEMA: simtools/schemas/metadata.metaschema.yml
   INTEGRATION_TESTS:
     - OUTPUT_FILE: test.yml
