--- a/tests/integration_tests/config/generate_regular_arrays_run_north.yml
+++ b/tests/integration_tests/config/generate_regular_arrays_run_north.yml
@@ -2,7 +2,7 @@ CTA_SIMPIPE:
   APPLICATION: simtools-generate-regular-arrays
   TEST_NAME: run-north
   CONFIGURATION:
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     SITE: North
     MODEL_VERSION: 6.0.0
     OUTPUT_FILE: generate_regular_arrays.ecsv
