--- a/tests/integration_tests/config/generate_regular_arrays_run_south.yml
+++ b/tests/integration_tests/config/generate_regular_arrays_run_south.yml
@@ -2,7 +2,7 @@ CTA_SIMPIPE:
   APPLICATION: simtools-generate-regular-arrays
   TEST_NAME: run-south
   CONFIGURATION:
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     SITE: South
     MODEL_VERSION: 6.0.0
     OUTPUT_FILE: generate_regular_arrays.ecsv
