--- a/tests/integration_tests/config/generate_simtel_array_histograms_file_lists.yml
+++ b/tests/integration_tests/config/generate_simtel_array_histograms_file_lists.yml
@@ -5,8 +5,8 @@ CTA_SIMPIPE:
     HIST_FILE_NAMES: ./tests/resources/simtel_output_files.txt
     PDF: true
     OUTPUT_FILE_NAME: test_simtel_hist_name
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     TEST: true
     USE_PLAIN_OUTPUT_PATH: true
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/test_simtel_hist_name.pdf
+    - OUTPUT_FILE: test_simtel_hist_name.pdf
