--- a/tests/integration_tests/config/generate_simtel_array_histograms_hist_file_names_pdf_no_name.yml
+++ b/tests/integration_tests/config/generate_simtel_array_histograms_hist_file_names_pdf_no_name.yml
@@ -5,8 +5,8 @@ CTA_SIMPIPE:
     HIST_FILE_NAMES: |
       ./tests/resources/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst
     PDF: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     TEST: true
     USE_PLAIN_OUTPUT_PATH: true
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst.pdf
+    - OUTPUT_FILE: run201_proton_za20deg_azm0deg_North_test_layout_test-prod.simtel.zst.pdf
