--- a/tests/integration_tests/config/plot_array_layout_from_list_north.yml
+++ b/tests/integration_tests/config/plot_array_layout_from_list_north.yml
@@ -4,9 +4,9 @@ CTA_SIMPIPE:
   CONFIGURATION:
     ARRAY_ELEMENT_LIST: ["LSTN-01", "MSTN"]
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     AXES_RANGE: 500.
     SHOW_LABELS: True
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/array_layout_list_North_ground_0deg.pdf
-    - OUTPUT_FILE: application-plots/array_layout_list_North_ground_0deg.png
+    - OUTPUT_FILE: array_layout_list_North_ground_0deg.pdf
+    - OUTPUT_FILE: array_layout_list_North_ground_0deg.png
