--- a/tests/integration_tests/config/plot_array_layout_from_list_south.yml
+++ b/tests/integration_tests/config/plot_array_layout_from_list_south.yml
@@ -4,8 +4,8 @@ CTA_SIMPIPE:
   CONFIGURATION:
     ARRAY_ELEMENT_LIST: ["LSTS", "MSTS", "SSTS"]
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     AXES_RANGE: 1200.
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/array_layout_list_South_ground_0deg.png
-    - OUTPUT_FILE: application-plots/array_layout_list_South_ground_0deg.pdf
+    - OUTPUT_FILE: array_layout_list_South_ground_0deg.png
+    - OUTPUT_FILE: array_layout_list_South_ground_0deg.pdf
