--- a/tests/integration_tests/config/plot_array_layout_one_file.yml
+++ b/tests/integration_tests/config/plot_array_layout_one_file.yml
@@ -4,7 +4,7 @@ CTA_SIMPIPE:
   CONFIGURATION:
     ARRAY_LAYOUT_FILE: tests/resources/telescope_positions-North-ground.ecsv
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_0deg.pdf
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_0deg.png
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_0deg.pdf
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_0deg.png
