--- a/tests/integration_tests/config/plot_array_layout_one_file_rotate.yml
+++ b/tests/integration_tests/config/plot_array_layout_one_file_rotate.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     MODEL_VERSION: 6.0.0
     ARRAY_LAYOUT_FILE: tests/resources/telescope_positions-North-ground.ecsv
     ROTATE_ANGLE: 20
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_20deg.pdf
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_20deg.png
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_20deg.pdf
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_20deg.png
