--- a/tests/integration_tests/config/plot_array_layout_one_file_with_name.yml
+++ b/tests/integration_tests/config/plot_array_layout_one_file_with_name.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     ARRAY_LAYOUT_FILE: tests/resources/telescope_positions-North-ground.ecsv
     MODEL_VERSION: 6.0.0
     FIGURE_NAME: test
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/test.pdf
-    - OUTPUT_FILE: application-plots/test.png
+    - OUTPUT_FILE: test.pdf
+    - OUTPUT_FILE: test.png
