--- a/tests/integration_tests/config/plot_array_layout_two_files_rotate.yml
+++ b/tests/integration_tests/config/plot_array_layout_two_files_rotate.yml
@@ -7,9 +7,9 @@ CTA_SIMPIPE:
       - tests/resources/telescope_positions-South-ground.ecsv
     MODEL_VERSION: 6.0.0
     ROTATE_ANGLE: 20
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_20deg.pdf
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-North-ground_North_ground_20deg.png
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-South-ground_South_ground_20deg.pdf
-    - OUTPUT_FILE: application-plots/array_layout_telescope_positions-South-ground_South_ground_20deg.png
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_20deg.pdf
+    - OUTPUT_FILE: array_layout_telescope_positions-North-ground_North_ground_20deg.png
+    - OUTPUT_FILE: array_layout_telescope_positions-South-ground_South_ground_20deg.pdf
+    - OUTPUT_FILE: array_layout_telescope_positions-South-ground_South_ground_20deg.png
