--- a/tests/integration_tests/config/validate_camera_efficiency_mstn.yml
+++ b/tests/integration_tests/config/validate_camera_efficiency_mstn.yml
@@ -5,11 +5,11 @@ CTA_SIMPIPE:
     SITE: North
     TELESCOPE: MSTN-design
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTN-design_nsb.pdf
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTN-design_nsb.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTN-design_cherenkov.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_MSTN-design_cherenkov.pdf
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-summary-North-MSTN-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-table-North-MSTN-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
+    - OUTPUT_FILE: validate_camera_efficiency_MSTN-design_nsb.pdf
+    - OUTPUT_FILE: validate_camera_efficiency_MSTN-design_nsb.png
+    - OUTPUT_FILE: validate_camera_efficiency_MSTN-design_cherenkov.png
+    - OUTPUT_FILE: validate_camera_efficiency_MSTN-design_cherenkov.pdf
+    - OUTPUT_FILE: camera-efficiency-summary-North-MSTN-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
+    - OUTPUT_FILE: camera-efficiency-table-North-MSTN-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
