--- a/tests/integration_tests/config/validate_camera_efficiency_ssts.yml
+++ b/tests/integration_tests/config/validate_camera_efficiency_ssts.yml
@@ -6,12 +6,12 @@ CTA_SIMPIPE:
     SITE: South
     TELESCOPE: SSTS-design
     MODEL_VERSION: 6.0.0
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
     LOG_LEVEL: debug
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: plots/validate_camera_efficiency_SSTS-design_nsb.pdf
-    - OUTPUT_FILE: plots/validate_camera_efficiency_SSTS-design_nsb.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_SSTS-design_cherenkov.png
-    - OUTPUT_FILE: plots/validate_camera_efficiency_SSTS-design_cherenkov.pdf
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-summary-South-SSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
-    - OUTPUT_FILE: camera-efficiency/camera-efficiency-table-South-SSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
+    - OUTPUT_FILE: validate_camera_efficiency_SSTS-design_nsb.pdf
+    - OUTPUT_FILE: validate_camera_efficiency_SSTS-design_nsb.png
+    - OUTPUT_FILE: validate_camera_efficiency_SSTS-design_cherenkov.png
+    - OUTPUT_FILE: validate_camera_efficiency_SSTS-design_cherenkov.pdf
+    - OUTPUT_FILE: camera-efficiency-summary-South-SSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.txt
+    - OUTPUT_FILE: camera-efficiency-table-South-SSTS-design-za20.0deg_azm000deg_validate_camera_efficiency.ecsv
