--- a/tests/integration_tests/config/validate_optics_run.yml
+++ b/tests/integration_tests/config/validate_optics_run.yml
@@ -9,6 +9,6 @@ CTA_SIMPIPE:
     SRC_DISTANCE: 11.
     ZENITH: 20
     TEST: true
-    OUTPUT_PATH: simtools-tests
+    OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: ray-tracing/results/ray-tracing-North-LSTN-01-d11.0km-za20.0deg_validate_optics.ecsv
+    - OUTPUT_FILE: results/ray-tracing-North-LSTN-01-d11.0km-za20.0deg_validate_optics.ecsv
