--- a/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_diffuse_20_deg_South_check_output.yml
@@ -4,18 +4,18 @@ CTA_SIMPIPE:
   CONFIGURATION:
     SIMULATION_SOFTWARE: corsika_simtel
     LABEL: check_output
-    MODEL_VERSION: prod6
-    SITE: North
+    MODEL_VERSION: 6.0.0
+    SITE: South
     ARRAY_LAYOUT_NAME: alpha
     PRIMARY: gamma
     RUN_NUMBER_START: 1
     NUMBER_OF_RUNS: 1
     AZIMUTH_ANGLE: South
     ZENITH_ANGLE: 20
-    NSHOW: 5
+    NSHOW: 10 # Increase the number of showers to 10, otherwise we do not get any triggered events
     VIEW_CONE: "0 deg 10 deg"
     ENERGY_RANGE: "100 GeV 500 GeV"
-    CORE_SCATTER: "10 500 m"
+    CORE_SCATTER: "20 700 m"
     DATA_DIRECTORY: simtools-output
     OUTPUT_PATH: simtools-output
     SIM_TELARRAY_SEEDS: "1745,290"
@@ -24,9 +24,9 @@ CTA_SIMPIPE:
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000001_gamma_diffuse_za20deg_azm180deg_North_alpha_check_output.log_hist.tar.gz
+        directory_for_grid_upload/run000001_gamma_diffuse_za20deg_azm180deg_South_alpha_check_output.log_hist.tar.gz
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000001_gamma_diffuse_za20deg_azm180deg_North_alpha_check_output.zst
+        directory_for_grid_upload/run000001_gamma_diffuse_za20deg_azm180deg_South_alpha_check_output.zst
     - EXPECTED_OUTPUT:
         # The mean trigger time for all telescopes should be
         # between 0 and 50 ns (very loose requirement)
