--- a/docker/Dockerfile-simtelarray
+++ b/docker/Dockerfile-simtelarray
@@ -18,6 +18,8 @@ RUN mkdir sim_telarray
 COPY corsika7.7_simtelarray.tar.gz sim_telarray
 RUN cd sim_telarray && \
     tar -xvf corsika7.7_simtelarray.tar.gz && \
+    rm -f examples-with-data.tar.gz && \
+    rm -f sim_telarray_config.tar.gz && \
     ./build_all $BUILD_OPT $HADRONIC_MODEL gsl
 
 RUN find sim_telarray/ -name "*.tar.gz" -exec rm -f {} \;
@@ -25,8 +27,8 @@ RUN find sim_telarray/ -name "*.tar.gz" -exec rm -f {} \;
 # corsika source code is removed to follow
 # the corsika non-distribution policy.
 RUN rm -f sim_telarray/corsika-run && \
-   mv sim_telarray/corsika-77*/run sim_telarray/corsika-run && \
-   rm -rf sim_telarray/corsika-77*
+    mv sim_telarray/corsika-77*/run sim_telarray/corsika-run && \
+    rm -rf sim_telarray/corsika-77*
 
 FROM almalinux/9-minimal
 WORKDIR /workdir
@@ -38,8 +40,13 @@ RUN microdnf update -y && microdnf install -y \
     zstd \
     gsl-devel \
     gcc-fortran \
+    procps \
     && \
     microdnf clean all
+
+# create a symbolic link to the corsika executable
+RUN cprog=$(/bin/ls /workdir/sim_telarray/corsika-run/corsika*$(uname)_* 2>/dev/null | tail -1) && \
+    ln -sf $cprog /workdir/sim_telarray/corsika-run/corsika
 
 ENV SIMTEL_PATH="/workdir/sim_telarray/"
 
