Update pyproject.toml for new pylint option `max-positional-arguments`
See issue #1147 

Closes #1147

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -237,6 +237,8 @@ max-args = 15
 max-locals = 50
 # Maximum number of attributes for a class (see R0902). (default=7)
 max-attributes = 50
+# Maximum number of positional arguments for function / method (default=5.)
+max-positional-arguments = 15
 # Maximum number of statements in function / method body. (default=50)
 max-statements = 80
 # Maximum number of public methods for a class (see R0904). (default=20)
