--- a/docker/Dockerfile-simtelarray
+++ b/docker/Dockerfile-simtelarray
@@ -1,4 +1,4 @@
-FROM almalinux as build_image
+FROM almalinux AS build_image
 WORKDIR /workdir
 ENV DEBIAN_FRONTEND=noninteractive
 ARG BUILD_OPT="prod6-sc"
@@ -10,6 +10,7 @@ RUN yum update -y && yum install -y \
     which \
     gcc-fortran \
     gsl-devel \
+    patch \
     && \
     yum clean all
 
