--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_check_output.yml
@@ -34,6 +34,5 @@ CTA_SIMPIPE:
         # should be between 20 and 1000 (very loose requirement)
         pe_sum: [20, 1000]
         # The mean number of photons per telescope after atmospheric absorption and QE
-        # should be between 90 and 1000 (very loose requirement,
-        # reduced to 90 after an update to sim_telarray lead to a result of 99.6)
+        # should be between 90 and 1000 (very loose requirement)
         photons: [90, 1000]
