--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -34,6 +34,24 @@ jobs:
             exit 1
           fi
 
+      - name: Check for complete API documentation
+        run: |-
+          MODULES=$(find simtools -type f -name "*.py" \
+            ! -path "simtools/applications/*" \
+            ! -name "__init__.py" \
+            ! -path "simtools/_*" -prune)
+          FULLY_DOCUMENTED="TRUE"
+          for M in $MODULES; do
+              module=$(basename $M .py)
+              if ! grep -q "$module" docs/source/api-reference/*.md; then
+                echo "Undocumented module: $module"
+                FULLY_DOCUMENTED="FALSE"
+              fi
+          done
+          if [[ $FULLY_DOCUMENTED = "FALSE" ]]; then
+              exit 1
+          fi
+
       - name: Build docs
         shell: bash -l {0}
         run: |
