--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -41,7 +41,7 @@ jobs:
             ! -name "__init__.py" \
             ! -path "simtools/_*" -prune)
           FULLY_DOCUMENTED="TRUE"
-          for M in "$MODULES"; do
+          for M in "${MODULES[@]}"; do
               module=$(basename "$M" .py)
               if ! grep -q "$module" docs/source/api-reference/*.md; then
                 echo "Undocumented module: $module"
