--- a/tests/integration_tests/config/derive_mirror_rnda_psf_measurement.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_measurement.yml
@@ -3,7 +3,7 @@ CTA_SIMPIPE:
   TEST_NAME: psf_measurement
   CONFIGURATION:
     SITE: North
-    TELESCOPE: MSTN-design
+    TELESCOPE: LSTN-01
     MODEL_VERSION: 6.0.0
     CONTAINMENT_FRACTION: 0.8
     MIRROR_LIST: |
