--- a/.github/workflows/CI-software-update.yml
+++ b/.github/workflows/CI-software-update.yml
@@ -14,6 +14,12 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install pylint # pre-commit uses local pylint
+        run: |
+          pip install pylint
 
       - uses: browniebroke/pre-commit-autoupdate-action@main
 
