--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,9 @@ scripts.simtools-generate-default-metadata = "simtools.applications.generate_def
 scripts.simtools-generate-regular-arrays = "simtools.applications.generate_regular_arrays:main"
 scripts.simtools-generate-simtel-array-histograms = "simtools.applications.generate_simtel_array_histograms:main"
 scripts.simtools-plot-array-layout = "simtools.applications.plot_array_layout:main"
+scripts.simtools-production-computing_resources = "simtools.applications.production_computing_resources:main"
+scripts.simtools-production-scale-events = "simtools.applications.production_scale_events:main"
+scripts.simtools-production-simulation-config = "simtools.applications.production_simulation_config:main"
 scripts.simtools-simulate-light-emission = "simtools.applications.simulate_light_emission:main"
 scripts.simtools-simulate-prod = "simtools.applications.simulate_prod:main"
 scripts.simtools-submit-data-from-external = "simtools.applications.submit_data_from_external:main"
