--- a/tests/resources/production_grid_generation_axes_definition.yaml
+++ b/tests/resources/production_grid_generation_axes_definition.yaml
@@ -1,25 +1,30 @@
 - name: energy
   range: [1.0e+9, 1.0e+14]
-  binning: 10
+  binning: 2
   scaling: log
   distribution: uniform
+  unit: TeV
 - name: azimuth
   range: [70, 80]
-  binning: 3
+  binning: 2
   scaling: linear
   distribution: uniform
+  unit: deg
 - name: zenith_angle
   range: [20, 30]
-  binning: 3
+  binning: 2
   scaling: linear
   distribution: uniform
-- name: night_sky_background
+  unit: deg
+- name: nsb
   range: [5, 6]
   binning: 2
   scaling: linear
   distribution: uniform
+  unit: 1/(sr*ns*cm**2)
 - name: offset
   range: [0, 10]
-  binning: 5
+  binning: 2
   scaling: linear
   distribution: uniform
+  unit: deg
