--- a/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
@@ -11,6 +11,13 @@ CTA_SIMPIPE:
     RNDA: 0.0063
     TEST: true
     OUTPUT_PATH: simtools-output
+    OUTPUT_FILE: test_derive_mirror_rnda_psf_random_flen.ecsv
+    USE_PLAIN_OUTPUT_PATH: true
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: TEST.ecsv
+    - OUTPUT_FILE: test_derive_mirror_rnda_psf_random_flen.ecsv
+    - REFERENCE_OUTPUT_FILE: |
+        tests/resources/derive_mirror_rnda_psf_random_flen.ecsv
+      TOLERANCE: 1.e-1
+      TEST_COLUMNS:
+        - mirror_reflection_random_angle_sigma1
