--- a/tests/integration_tests/config/production_calculate_resource_estimates.yml
+++ b/tests/integration_tests/config/production_calculate_resource_estimates.yml
@@ -5,8 +5,10 @@ CTA_SIMPIPE:
     AZIMUTH: 60.0
     ELEVATION: 45.0
     NSB: 0.3
-    SITE: "South"
-    NUMBER_OF_EVENTS: 1e9
-    LOOKUP_FILE: production_resource_estimates.yaml
+    SITE: North
+    NUMBER_OF_EVENTS: 1.0e+9
+    LOOKUP_FILE: "tests/resources/production_resource_estimates.yaml"
+    OUTPUT_PATH: simtools-output
+
   INTEGRATION_TESTS:
     - OUTPUT_FILE: "estimated_resources.json"
