--- a/tests/integration_tests/config/production_generate_grid.yml
+++ b/tests/integration_tests/config/production_generate_grid.yml
@@ -11,4 +11,4 @@ CTA_SIMPIPE:
     OBSERVING_TIME: "2017-09-16 00:00:00"
     OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: "generated_grid.json"
+    - OUTPUT_FILE: "grid_output.json"
