--- a/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_random_flen.yml
@@ -7,7 +7,7 @@ CTA_SIMPIPE:
     MODEL_VERSION: 6.0.0
     CONTAINMENT_FRACTION: 0.8
     PSF_MEASUREMENT_CONTAINMENT_MEAN: 1.4
-    USE_RANDOM_FLEN: true
+    USE_RANDOM_FOCAL_LENGTH: true
     RNDA: 0.0063
     TEST: true
     OUTPUT_PATH: simtools-output
