Fix no tuning integration test

--- a/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_no_tuning.yml
@@ -9,7 +9,8 @@ CTA_SIMPIPE:
     MIRROR_LIST: |
       ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
     PSF_MEASUREMENT: ./tests/resources/MLTdata-preproduction.ecsv
-    USE_RANDOM_FLEN: true
+    USE_RANDOM_FOCAL_LENGTH: false
+    NO_TUNING: true
     RNDA: 0.0063
     TEST: true
     OUTPUT_PATH: simtools-output
