Fix integration tests

--- a/tests/integration_tests/config/derive_mirror_rnda_psf_measurement.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_measurement.yml
@@ -3,13 +3,11 @@ CTA_SIMPIPE:
   TEST_NAME: psf_measurement
   CONFIGURATION:
     SITE: North
-    TELESCOPE: LSTN-01
+    TELESCOPE: MSTN-design
     MODEL_VERSION: 6.0.0
     CONTAINMENT_FRACTION: 0.8
-    MIRROR_LIST: |
-      ./tests/resources/mirror_list_CTA-N-LST1_v2019-03-31_rotated.ecsv
     PSF_MEASUREMENT: ./tests/resources/MLTdata-preproduction.ecsv
-    USE_RANDOM_FLEN: true
+    USE_RANDOM_FOCAL_LENGTH: true
     RNDA: 0.0063
     TEST: true
     OUTPUT_PATH: simtools-output
@@ -20,6 +18,6 @@ CTA_SIMPIPE:
     - OUTPUT_FILE: test_derive_mirror_rnda_psf_measurement.ecsv
     - REFERENCE_OUTPUT_FILE: |
         tests/resources/derive_mirror_rnda_psf_measurement.ecsv
-      TOLERANCE: 1.e-1
+      TOLERANCE: 3.e-1
       TEST_COLUMNS:
         - mirror_reflection_random_angle_sigma1
