--- a/tests/integration_tests/config/derive_mirror_rnda_psf_mean.yml
+++ b/tests/integration_tests/config/derive_mirror_rnda_psf_mean.yml
@@ -12,6 +12,13 @@ CTA_SIMPIPE:
     RNDA: 0.003
     TEST: true
     OUTPUT_PATH: simtools-output
+    OUTPUT_FILE: test_derive_mirror_rnda_psf_mean.ecsv
+    USE_PLAIN_OUTPUT_PATH: true
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: TEST.ecsv
+    - OUTPUT_FILE: test_derive_mirror_rnda_psf_mean.ecsv
+    - REFERENCE_OUTPUT_FILE: |
+        tests/resources/derive_mirror_rnda_psf_mean.ecsv
+      TOLERANCE: 3.e-1
+      TEST_COLUMNS:
+        - mirror_reflection_random_angle_sigma1
