--- a/tests/integration_tests/config/production_generate_simulation_config.yml
+++ b/tests/integration_tests/config/production_generate_simulation_config.yml
@@ -2,16 +2,17 @@ CTA_SIMPIPE:
   APPLICATION: simtools-production-generate-simulation-config
   TEST_NAME: production_generate_simulation_config
   CONFIGURATION:
-    SITE: "North"
+    SITE: North
     AZIMUTH: 60.0
     ELEVATION: 45.0
     NSB: 0.3
     DATA_LEVEL: "B"
     SCIENCE_CASE: "high_precision"
-    FILE_PATH: "path/to/fits_file.fits"
+    FILE_PATH: "tests/resources/production_dl2_fits/prod6_LaPalma-20deg_gamma_cone.N.Am-4LSTs09MSTs_ID0_reduced.fits"
     FILE_TYPE: "On-source"
-    METRICS_FILE: "path/to/metrics.yaml"
-    COORDINATE_SYSTEM: "ra_dec"
+    METRICS_FILE: tests/resources/production_simulation_config_metrics.yaml
     OUTPUT_PATH: simtools-output
+    OUTPUT_FILE: "configured_simulation_params.json"
+
   INTEGRATION_TESTS:
     - OUTPUT_FILE: "configured_simulation_params.json"
