--- a/tests/integration_tests/config/production_generate_grid.yml
+++ b/tests/integration_tests/config/production_generate_grid.yml
@@ -10,5 +10,6 @@ CTA_SIMPIPE:
     COORDINATE_SYSTEM: "ra_dec"
     OBSERVING_TIME: "2017-09-16 00:00:00"
     OUTPUT_PATH: simtools-output
+    OUTPUT_FILE: grid_output.json
   INTEGRATION_TESTS:
     - OUTPUT_FILE: "grid_output.json"
