--- a/tests/integration_tests/config/convert_model_parameter_from_simtel_num_gains.yml
+++ b/tests/integration_tests/config/convert_model_parameter_from_simtel_num_gains.yml
@@ -9,6 +9,7 @@ CTA_SIMPIPE:
     SCHEMA: ./tests/resources/num_gains.schema.yml
     OUTPUT_PATH: simtools-output
     OUTPUT_FILE: num_gains.json
+    USE_PLAIN_OUTPUT_PATH: True
   INTEGRATION_TESTS:
     - REFERENCE_OUTPUT_FILE: |
         ./tests/resources/model_parameters/num_gains.json
