--- a/tests/integration_tests/config/simulate_light_emission_variable.yml
+++ b/tests/integration_tests/config/simulate_light_emission_variable.yml
@@ -10,3 +10,5 @@ CTA_SIMPIPE:
     MODEL_VERSION: 6.0.0
     LIGHT_SOURCE_TYPE: led
     OUTPUT_PATH: simtools-output
+  INTEGRATION_TESTS:
+    - OUTPUT_FILE: logfile.log
