--- a/tests/resources/production_simulation_config_metrics.yaml
+++ b/tests/resources/production_simulation_config_metrics.yaml
@@ -1,9 +1,11 @@
-# This YAML file contains the error metrics used for statistical error evaluation
-#  for production configuration.
-#
+# This YAML file contains the error metrics and validity ranges for statistical error evaluation.
 # Metrics:
 #   error_eff_area: Relative error on the effective area
 #   error_energy_estimate_bdt_reg_tree: Error in energy estimation using BDT regression
 
-error_eff_area: 0.02
-error_energy_estimate_bdt_reg_tree: 0.05
+error_eff_area:
+  target_error: 0.02
+  valid_range: [0.04, 200]  # Energy range in TeV
+error_energy_estimate_bdt_reg_tree:
+  target_error: 0.05
+  valid_range: [0.04, 200]  # Energy range in TeV
