--- a/pyproject.toml
+++ b/pyproject.toml
@@ -282,6 +282,7 @@ filename = "CHANGELOG.md"
 underlines = [ "", "", "" ]
 title_format = "## [{version}](https://github.com/gammasim/simtools/tree/{version}) - {project_date}"
 issue_format = "[#{issue}](https://github.com/gammasim/simtools/pull/{issue})"
+start_string = "<!-- towncrier release notes start -->\n"
 
 [tool.towncrier.fragment.feature]
 name = "New Features"
