add simulation model and some examples

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -303,3 +303,7 @@ showcontent = true
 [tool.towncrier.fragment.doc]
 name = "Documentation"
 showcontent = true
+
+[tool.towncrier.fragment.model]
+name = "Simulation model"
+showcontent = true
