--- a/.github/workflows/CI-schema-validation.yml
+++ b/.github/workflows/CI-schema-validation.yml
@@ -53,7 +53,7 @@ jobs:
             --log_level DEBUG
           done
 
-      - name: Integration config file validation
+      - name: Integration test config file validation
         run: |
           for file in tests/integration_tests/config/*.yml; do
             echo "Testing config file $file"
