--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python=3.11
   - astropy
   - boost-histogram
-  - ctapipe
+  - ctapipe-base
   - eventio
   - jsonschema
   - matplotlib-base
