rename to energy_estimate

--- a/tests/resources/production_simulation_config_metrics.yaml
+++ b/tests/resources/production_simulation_config_metrics.yaml
@@ -1,7 +1,7 @@
 # This YAML file contains the error metrics and validity ranges for statistical error evaluation.
 # Metrics:
 #   uncertainty_effective_area: Relative error on the effective area
-#   error_energy_estimate_bdt_reg_tree: Error in energy estimation using BDT regression
+#   energy_estimate: Error in energy estimation using BDT regression
 
 uncertainty_effective_area:
   target_error:
@@ -11,7 +11,7 @@ uncertainty_effective_area:
       - 0.04
       - 200
     unit: TeV
-error_energy_estimate_bdt_reg_tree:
+energy_estimate:
   target_error:
     value: 0.05
   valid_range:
