--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.host.url=https://sonar-cta-dpps.zeuthen.desy.de
 sonar.qualitygate.wait=true
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.version=3.11
-sonar.exclusions=**/docs/**,simtools/applications/*
+sonar.exclusions=**/docs/**,src/simtools/applications/*
 sonar.coverage.exclusions=**/tests/**
