codecov before sonar

--- a/.github/workflows/CI-unittests.yml
+++ b/.github/workflows/CI-unittests.yml
@@ -101,8 +101,14 @@ jobs:
           pytest --durations=10 --color=yes -n auto --dist loadscope \
             --cov=simtools --cov-report=xml
 
-      # CTAO-DPPS-SonarQube
-      - uses: SonarSource/sonarqube-scan-action@v4.0.0
+      - name: Upload coverage report to codecov
+        uses: codecov/codecov-action@v5
+        if: contains(matrix.extra-args, 'codecov')
+        with:
+          token: ${{ secrets.CODECOV_SIMTOOLS_TOKEN }}
+
+      - name: CTAO-DPPS-SonarQube
+        uses: SonarSource/sonarqube-scan-action@v4.0.0
         if: contains(matrix.extra-args, 'codecov')
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -112,9 +118,3 @@ jobs:
         shell: bash -l {0}
         run: |
           pytest --color=yes -n auto --dist loadscope --count 5 --random-order
-
-      - name: Upload coverage report to codecov
-        uses: codecov/codecov-action@v5
-        if: contains(matrix.extra-args, 'codecov')
-        with:
-          token: ${{ secrets.CODECOV_SIMTOOLS_TOKEN }}
