--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
-  - astropy
+  - astropy-base
   - boost-histogram
   - ctapipe-base
   - eventio
