--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dynamic = [
   "version",
 ]
 dependencies = [
-  "astropy-base",
+  "astropy",
   "boost-histogram",
   "ctao-dpps-cosmic-ray-spectra",
   "ctapipe-base",
