--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,10 @@ dependencies = [
   "astropy",
   "boost-histogram",
   "ctao-dpps-cosmic-ray-spectra",
-  "ctapipe-base",
+  "ctapipebase",
   "eventio",
   "jsonschema",
-  "matplotlib-base",
+  "matplotlib",
   "numpy",
   "particle",
   "pymongo",
