--- a/tests/resources/plot_table_data/plot_lightguide_efficiency_vs_incidence_angle_parameter.yml
+++ b/tests/resources/plot_table_data/plot_lightguide_efficiency_vs_incidence_angle_parameter.yml
@@ -20,9 +20,9 @@ CTA_SIMPIPE:
         LABEL: 'LSTN-02'
         COLUMN_X: 'angle'
         COLUMN_Y: 'efficiency'
-      - PARAMETER: lightguide_efficiency_vs_incidence_angle
+      - PARAMETER: lightguide_efficiency_vs_wavelength
         TELESCOPE: MSTN-design
-        SITE: NORTH
+        SITE: North
         MODEL_VERSION: 6.0.0
         LABEL: 'MSTN'
         COLUMN_X: 'angle'
